<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fffefefe"
        android:id="@+id/root_container"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                style="@style/AppTheme"
                android:id="@+id/toolbar"
            />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/container">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Hello World!"/>

            </FrameLayout>

        </LinearLayout>


</FrameLayout>

